# src/main/java/io/seorin/ddongkan/biz/ToiletController.java
@@ -15,6 +15,7 @@ import org.springframework.web.bind.annotation.RestController;
 
 import io.seorin.ddongkan.dto.RaitingResponse;
 import io.seorin.ddongkan.dto.ReviewRequest;
+import io.seorin.ddongkan.dto.ReviewResponse;
 import io.seorin.ddongkan.dto.ToiletDetailResponse;
 import io.seorin.ddongkan.dto.ToiletResponse;
 import jakarta.validation.Valid;
@@ -53,11 +54,21 @@ public class ToiletController {
 		return new ResponseEntity<>(result, HttpStatus.OK);
 	}
 
-	@PostMapping("/{id}")
+	@PostMapping("/{id}/review")
 	public ResponseEntity<Void> addReview(
 		@PathVariable("id") Long id,
 		@Valid @RequestBody final ReviewRequest reviewRequest) {
 		this.toiletService.addReview(id, reviewRequest);
 		return new ResponseEntity<>(HttpStatus.OK);
+	}
+
+	@GetMapping("/{id}/reviews")
+	public ResponseEntity<List<ReviewResponse>> getReviews(
+		@PathVariable("id") Long id,
+		@RequestParam(name = "size", defaultValue = "10") Integer size,
+		@RequestParam(name = "index", defaultValue = "0") Integer index) {
+
+		var result = toiletService.getReviews(id, size, index);
+		return new ResponseEntity<>(result, HttpStatus.OK);
 	}
 }
